6019.	[func]		Deprecate `coresize`, `datasize`, `files`, and
			`stacksize` named.conf options. [GL #3676]

6018.	[cleanup]	Remove the --with-tuning configure option.
			[GL #3664]

6017.	[bug]		The view's zone table was not locked when it should
			have been leading to race conditions when external
			extensions that manipulate the zone table where in
			use. [GL #3468]

6016.	[func]		Change NSEC3PARAM TTL to match the SOA MINIMUM.
			[GL #3570]

6015.	[bug]		Some browsers (Firefox) send more than 10 HTTP
			headers.  Bump the number of allowed HTTP headers
			to 100. [GL #3670]

6014.	[func]		Add isc_hashmap API implementation that implements
			Robin Hood hashing.  The API requires the keys to
			be stored with the stored value.  [GL !6790]

	--- 9.19.7 released ---

6013.	[bug]		Fix a crash that could happen when you change
			a dnssec-policy zone with NSEC3 to start using
			inline-signing. [GL #3591]

6012.	[placeholder]

6011.	[func]		Refactor the privilege setting part of named_os unit
			to make libcap on Linux mandatory and use setreuid
			and setregid if available. [GL #3583]

6010.	[func]		Make the initial interface scan happen before
			dropping the privileges.  This requires exiting
			exclusive mode before scanning the interfaces
			and re-entering it again when we are done.  This
			is because starting the listening on interfaces
			requires the loopmgr to be running and not paused.
			[GL #3583]

6009.	[bug]		Don't trust a placeholder KEYDATA from the managed-keys
			zone by adding it into secroots. [GL #2895]

6008.	[bug]		Fixed a race condition that could cause a crash
			in dns_zone_synckeyzone(). [GL #3617]

6007.	[cleanup]	Don't enforce the jemalloc use on NetBSD. [GL #3634]

6006.	[cleanup]	The zone dumping was using isc_task API to launch
			the zonedump on the offloaded threadpool.  Remove
			the task and launch the offloaded work directly.
			[GL #3628]

6005.	[func]		The zone loading has been moved to the offload