@@ -1,3 +1,6 @@
+6020.	[bug]		Ensure 'named-checkconf -z' respects the check-wildcard
+			option when loading a zone.  [GL #1905]
+
 6019.	[func]		Deprecate `coresize`, `datasize`, `files`, and
 			`stacksize` named.conf options. [GL #3676]
 
